--- a/apworlds.html
+++ b/apworlds.html
@@ -99,6 +99,7 @@
                 <small><a href="#ChronoTrigger">Chrono Trigger (SNES)</a></small>
                 <small><a href="#Clique">Clique (Web)</a></small>
                 <small><a href="#CrossCode">CrossCode (PC)</a></small>
+                <small><a href="#Cuphead">Cuphead (PC)</a></small>
                 <small><a href="#DarkSouls3">Dark Souls III (PC)</a></small>
                 <small><a href="#DigimonWorld">Digimon World (PSX)</a></small>
                 <small><a href="#DLCQuest">DLC Quest (PC)</a></small>
@@ -177,7 +178,6 @@
                 <small>&emsp;<a href="#SuperMarioLand26GoldenCoins">Super Mario Land 2: 6 Golden Coins (GB)</a></small>
                 <small>&emsp;<a href="#SuperMarioWorld">Super Mario World (SNES)</a></small>
                 <small>&emsp;<a href="#SuperMario64">Super Mario 64 (N64/PC)</a></small>
-                <small>&emsp;<a href="#SuperMarioSunshine">Super Mario Sunshine (GC)</a></small>
                 <small>[Mario Franchise - Others]</small>
                 <small>&emsp;<a href="#MarioAndLuigiSuperstarSaga">Mario & Luigi: Superstar Saga (GBA)</a></small>
                 <small>&emsp;<a href="#MarioIsMissing">Mario is Missing! (SNES)</a></small>
@@ -451,7 +451,7 @@
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1281312490940006482">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1286132486610620416">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Thedragon005/Archipelago-Ape-Escape/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
@@ -657,6 +657,15 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/CrossCode-Poptracker-AP/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/CodeTriangle/CCMultiworldRandomizer/wiki/Setup">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1128180904926396437">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Cuphead"></span> Cuphead (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/JKLeckr/Archipelago-cuphead/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/JKLeckr/CupheadArchipelagoMod/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/JKLeckr/CupheadArchipelagoMod/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1050929729844297789">Link</a>]</li>
                 </ul>
 
                 <h3><span id="DarkSouls3"></span> Dark Souls III (PC)</h3>
@@ -915,7 +924,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1274462779213873192">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1228893356596265000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
@@ -1182,13 +1191,6 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/ThePhar/APSM64TrackerPack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Super%20Mario%2064/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/937206798014898186">Link</a>]</li>
-                </ul>
-
-                <h3><span id="SuperMarioSunshine"></span> Super Mario Sunshine (GC)</h3>
-
-                <ul>
-                    <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/MrsMarinaRose/archipelago-sms/releases">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1092579545615450183">Link</a>]</li>
                 </ul>
 
                 <h3><span id="MarioAndLuigiSuperstarSaga"></span> Mario & Luigi: Superstar Saga (GBA)</h3>
@@ -1987,9 +1989,8 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1282378388514017352">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1282378892727947401">Link</a>]</li>
+                    <li><strong>Game Mod</strong> 3.x.x releases [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 4.x.x releases [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/TUNIC/setup/en">Link</a>]</li>
@@ -2018,7 +2019,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330675452264499/1196534846365896825">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330675452264499/1286047374783021098">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/jonloveslegos/undertale-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://jonloveslegos.github.io/undertale-tracker/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Undertale/setup/en">Link</a>]</li>
