--- a/index.html
+++ b/index.html
@@ -45,6 +45,61 @@
                     </p>
                 </header>
 
+                <h2 id="W202438">Week of September 16-22, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Digimon World [<a href="apworlds.html#DigimonWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasy12OpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project Diva Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> KINGDOM HEARTS Birth by Sleep FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSBirthBySleepFINALMIX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X2 [<a href="apworlds.html#MegaManX2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mindustry [<a href="apworlds.html#Mindustry">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Undertale [<a href="apworlds.html#Undertale">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasy12OpenWorld">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Mindustry [<a href="apworlds.html#Mindustry">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Shapez [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3960">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202437">Week of September 9-15, 2024</h2>
 
                 <ul>
