--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (206)</h2>
+                <h2>APWorlds (207)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -144,6 +144,7 @@
                 <small><a href="#Hades">Hades (PC)</a></small>
                 <small><a href="#Hammerwatch">Hammerwatch (PC)</a></small>
                 <small><a href="#HatsuneMikuProjectDivaMegaMix">Hatsune Miku: Project Diva Mega Mix+ (PC)</a></small>
+                <small><a href="#HereComesNiko">Here Comes Niko! (PC)</a></small>
                 <small><a href="#Heretic">Heretic (PC)</a></small>
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
                 <small><a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
@@ -451,7 +452,7 @@
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1286132486610620416">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1290075949634682943">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Thedragon005/Archipelago-Ape-Escape/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
@@ -938,6 +939,14 @@
                     <li><strong>Game Mod</strong> [<a href="https://gamebanana.com/mods/514140">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Cynichill/DivaAPworld/blob/main/docs/en_Mega_Mix.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241134454391443580">Link</a>]</li>
+                </ul>
+
+                <h3><span id="HereComesNiko"></span> Here Comes Niko! (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/niieli/Niko-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/niieli/NikoArchipelagoMod/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1289974001434886287">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Heretic"></span> Heretic (PC)</h3>
@@ -1558,6 +1567,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/dontjoome/RE3R_AP_World/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/dontjoome/RE3R_AP_Client">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/1085716850370957462/1261562909809709056/1289322412189679723">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702/1232907046089654314">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1261562909809709056">Link</a>]</li>
                 </ul>
@@ -1877,7 +1887,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Alternate APWorld</strong> Advanced ER - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090819435893362768/1265685905146908682">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1286692984288575661/1288206970393985149">Link</a>]</li>
                     <li><strong>Tracker</strong> Opened from the game client (Magpie button)</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Links%20Awakening%20DX/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090819435893362768">Link</a>]</li>
