--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (207)</h2>
+                <h2>APWorlds (211)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -60,7 +60,7 @@
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
-                <small><a href="#ARobotNamedFight">A Robot Named Fight (PC)</a></small>
+                <small><a href="#ARobotNamedFight">A Robot Named Fight! (PC)</a></small>
                 <small><a href="#AShortHike">A Short Hike (PC)</a></small>
                 <small><a href="#Adventure">Adventure (2600)</a></small>
                 <small><a href="#AgainstTheStorm">Against the Storm (PC)</a></small>
@@ -99,6 +99,7 @@
                 <small><a href="#ChronoTrigger">Chrono Trigger (SNES)</a></small>
                 <small><a href="#Clique">Clique (Web)</a></small>
                 <small><a href="#CrossCode">CrossCode (PC)</a></small>
+                <small><a href="#Crystalis">Crystalis (NES)</a></small>
                 <small><a href="#Cuphead">Cuphead (PC)</a></small>
                 <small><a href="#DarkSouls3">Dark Souls III (PC)</a></small>
                 <small><a href="#DigimonWorld">Digimon World (PSX)</a></small>
@@ -147,7 +148,11 @@
                 <small><a href="#HereComesNiko">Here Comes Niko! (PC)</a></small>
                 <small><a href="#Heretic">Heretic (PC)</a></small>
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
-                <small><a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
+                <br />
+                <small>[HuniePop Franchise]</small>
+                <small>&emsp;<a href="#HuniePop">HuniePop (PC)</a></small>
+                <small>&emsp;<a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
+                <br />
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
                 <small><a href="#Increlution">Increlution (PC)</a></small>
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
@@ -165,7 +170,10 @@
                 <small>&emsp;<a href="#KINGDOMHEARTSReChainOfMemories">KINGDOM HEARTS Re:Chain of Memories (PC)</a></small>
                 <small>&emsp;<a href="#KINGDOMHEARTS2FINALMIX">KINGDOM HEARTS II FINAL MIX (PC)</a></small>
                 <br />
-                <small><a href="#KirbysDreamLand3">Kirby's Dream Land 3 (SNES)</a></small>
+                <small>[Kirby Franchise]</small>
+                <small>&emsp;<a href="#KirbysDreamLand3">Kirby's Dream Land 3 (SNES)</a></small>
+                <small>&emsp;<a href="#Kirby64TheCrystalShards">Kirby 64: The Crystal Shards (N64)</a></small>
+                <br />
                 <small><a href="#Landstalker">Landstalker - The Treasures of King Nole (GEN)</a></small>
                 <small><a href="#LeagueOfLegends">League of Legends (PC)</a></small>
                 <small><a href="#LethalCompany">Lethal Company (PC)</a></small>
@@ -262,9 +270,11 @@
                 <small><a href="#SlayTheSpire">Slay the Spire (PC)</a></small>
                 <small><a href="#SlyCooperAndTheThieviusRaccoonus">Sly Cooper and the Thievius Raccoonus (PS2)</a></small>
                 <br />
-                <small>[Sonic Franchise]</small>
+                <small>[Sonic Franchise - Sonic Adventure Series]</small>
                 <small>&emsp;<a href="#SonicAdventureDX">Sonic Adventure DX (PC)</a></small>
                 <small>&emsp;<a href="#SonicAdventure2Battle">Sonic Adventure 2: Battle (PC)</a></small>
+                <small>[Sonic Franchise - Others]</small>
+                <small>&emsp;<a href="#ShadowTheHedgehog">Shadow the Hedgehog (GC)</a></small>
                 <br />
                 <small><a href="#SoulBlazer">Soul Blazer (SNES)</a></small>
                 <small><a href="#Spelunker">Spelunker (NES)</a></small>
@@ -367,10 +377,10 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257453386073374842">Link</a>]</li>
                 </ul>
 
-                <h3><span id="ARobotNamedFight"></span> A Robot Named Fight (PC)</h3>
+                <h3><span id="ARobotNamedFight"></span> A Robot Named Fight! (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1169389087371841708/1261835999168954438">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://www.moddb.com/mods/arnf-archipelago/downloads/arnf-mod-v2">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/BetaSprite/ARNFArchipelago/blob/main/worlds/ARNF/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1169389087371841708">Link</a>]</li>
                 </ul>
@@ -452,8 +462,8 @@
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1290075949634682943">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/Thedragon005/Archipelago-Ape-Escape/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Thedragon005/Archipelago-Ape-Escape/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Thedragon005/Ape-Escape-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
 
@@ -656,8 +666,17 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/CodeTriangle/CCMultiworldRandomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/CrossCode-Poptracker-AP/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/CodeTriangle/CCMultiworldRandomizer/wiki/Setup">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Ars-Ignis/Archipelago/blob/crystalis/worlds/crystalis/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1128180904926396437">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Crystalis"></span> Crystalis (NES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Ars-Ignis/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Ars-Ignis/crystalis-randomizer-tracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1041412559460389017/1291621296140189706">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1041412559460389017">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Cuphead"></span> Cuphead (PC)</h3>
@@ -714,7 +733,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/DragonWolfLeo/Archipelago-DST/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3218471273">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/DragonWolfLeo/Archipelago-DST/blob/main/worlds/dst/docs/setup_en.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1195385214877306921">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1149971904447385751">Link</a>]</li>
                 </ul>
 
                 <h3><span id="DonkeyKongCountry3DixieKongsDoubleTrouble"></span><span id="DonkeyKongCountry3"></span> Donkey Kong Country 3: Dixie Kong's Double Trouble! (SNES)</h3>
@@ -969,6 +988,14 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
                 </ul>
 
+                <h3><span id="HuniePop"></span> HuniePop (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-APWorld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-Archipelago-Client/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1291278671621128222">Link</a>]</li>
+                </ul>
+
                 <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
 
                 <ul>
@@ -1059,6 +1086,7 @@
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/gaithernOrg/KH1FM-AP/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/OpenKH/OpenKh/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Lojtana/Kingdom-Hearts-FM-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1155095286113390694">Link</a>]</li>
                 </ul>
 
@@ -1104,6 +1132,13 @@
                     <li><strong>Prerelease APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224389195485806703/1241323359346757642">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kirby's%20Dream%20Land%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389195485806703">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Kirby64TheCrystalShards"></span> Kirby 64: The Crystal Shards (N64)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175344681928904806">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Landstalker"></span> Landstalker - The Treasures of King Nole (GEN)</h3>
@@ -1349,8 +1384,8 @@
                 <h3><span id="SuperJunkoid"></span> Super Junkoid (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1246510023899742260">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1247508949658243183">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1291149795699720232">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1290806222731088035">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1196920710724071555">Link</a>]</li>
                 </ul>
 
@@ -1753,6 +1788,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/PoryGone/SA2B_AP_Tracker/releases/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Sonic%20Adventure%202%20Battle/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/980554290798145566">Link</a>]</li>
+                </ul>
+
+                <h3><span id="ShadowTheHedgehog"></span> Shadow the Hedgehog (GC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/choatix/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1142558464242094200/1291501105267867760">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142558464242094200">Link</a>]</li>
                 </ul>
 
                 <h3><span id="SoulBlazer"></span> Soul Blazer (SNES)</h3>
