--- a/index.html
+++ b/index.html
@@ -45,6 +45,51 @@
                     </p>
                 </header>
 
+                <h2 id="W202440">Week of September 30 - October 6, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> A Robot Named Fight! [<a href="apworlds.html#ARobotNamedFight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Manual [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Junkoid [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Robot Named Fight! [<a href="apworlds.html#ARobotNamedFight">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Crystalis [<a href="apworlds.html#Crystalis">Link</a>]</li>
+                    <li><strong>New APWorld</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Kirby 64: The Crystal Shards [<a href="apworlds.html#Kirby64TheCrystalShards">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Shadow the Hedgehog [<a href="apworlds.html#ShadowTheHedgehog">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202439">Week of September 23-29, 2024</h2>
 
                 <ul>
