--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (211)</h2>
+                <h2>APWorlds (213)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -119,6 +119,7 @@
                 <small><a href="#DukeNukem3DAtomicEdition">Duke Nukem 3D: Atomic Edition (PC)</a></small>
                 <small><a href="#EarthBound">EarthBound (SNES)</a></small>
                 <small><a href="#EnderLiliesQuietusOfTheKnights">Ender Lilies: Quietus of the Knights (PC)</a></small>
+                <small><a href="#EnterTheGungeon">Enter the Gungeon (PC)</a></small>
                 <small><a href="#Factorio">Factorio (PC)</a></small>
                 <small><a href="#Faxanadu">Faxanadu (NES)</a></small>
                 <br />
@@ -312,6 +313,7 @@
                 <small><a href="#ULTRAKILL">ULTRAKILL (PC)</a></small>
                 <small><a href="#Undertale">Undertale (PC)</a></small>
                 <small><a href="#VacationSimulator">Vacation Simulator (VR)</a></small>
+                <small><a href="#VoidStranger">Void Stranger (PC)</a></small>
                 <small><a href="#VVVVVV">VVVVVV (PC)</a></small>
                 <br />
                 <small>[Wargroove Franchise]</small>
@@ -472,6 +474,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld + Game Mod</strong> 1.4.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/palex00/aquaria-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Aquaria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257452465272389687">Link</a>]</li>
                 </ul>
@@ -800,6 +803,15 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1093030832886792242">Link</a>]</li>
                 </ul>
 
+                <h3><span id="EnterTheGungeon"></span> Enter the Gungeon (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/KinTheInfinite/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/enter-the-gungeon/p/GungeonArchipelago/Gungeon_Archipelago/">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/KinTheInfinite/Archipelago/blob/main/worlds/enter_the_gungeon/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191767250257055785">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Factorio"></span> Factorio (PC)</h3>
 
                 <ul>
@@ -918,7 +930,8 @@
                 <h3><span id="GrimDawn"></span> Grim Dawn (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1266462433497583667">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/FarisTheAncient/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://www.nexusmods.com/grimdawn/mods/167">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/routhken/Grim_Dawn_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1212473211820707901">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1114646643225137224">Link</a>]</li>
@@ -1120,7 +1133,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090817012416118815/1257594423668244572">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/OpenKH/OpenKh/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/JDProchaska/Kingdom-Hearts-2-FM-Pop-Tracker-Pack/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/palex00/kh2-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kingdom%20Hearts%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090817012416118815">Link</a>]</li>
                 </ul>
@@ -1138,6 +1151,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/RunInAWeek/Kirby-64-Archipelago-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175344681928904806">Link</a>]</li>
                 </ul>
 
@@ -1478,6 +1492,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/c-ostic/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/c-ostic/OriBFArchipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/5ully/OriDETracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1036405779726610452">Link</a>]</li>
                 </ul>
 
@@ -1601,7 +1616,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/dontjoome/RE3R_AP_World/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/dontjoome/RE3R_AP_Client">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/dontjoome/RE3R_AP_Client/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/1085716850370957462/1261562909809709056/1289322412189679723">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702/1232907046089654314">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1261562909809709056">Link</a>]</li>
@@ -2088,6 +2103,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1204935955580985414">Link</a>]</li>
                 </ul>
 
+                <h3><span id="VoidStranger"></span> Void Stranger (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/CriminalPancake/void-stranger-ap">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/CriminalPancake/void-stranger-ap/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1231073014439743528">Link</a>]</li>
+                </ul>
+
                 <h3><span id="VVVVVV"></span> VVVVVV (PC)</h3>
 
                 <ul>
@@ -2109,7 +2132,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1281285774305660989">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1295526134045343765">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
